--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yi Zou - Publications</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,7 +47,6 @@
               </div>
               <nav class="flex w-full flex-wrap items-center justify-center gap-x-6 gap-y-2 font-inter text-[12px] text-muted sm:text-[14px] md:w-auto md:gap-[32px] md:text-[15px]">
                 <a href="index.html" class="hover:text-ink">About</a>
-                <a href="index.html#research" class="hover:text-ink">Research</a>
                 <a href="publications.html" class="font-semibold text-ink">Publications</a>
               </nav>
             </div>
