--- a/index.html
+++ b/index.html
@@ -422,5 +422,11 @@
           bioIntro.textContent = "Bio unavailable.";
         });
     </script>
+
+    <script
+      data-goatcounter="https://joeyzou.goatcounter.com/count"
+      async
+      src="https://gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
