--- a/publications.html
+++ b/publications.html
@@ -237,5 +237,11 @@
             '<p class="font-inter text-[14px] text-muted">Publications unavailable.</p>';
         });
     </script>
+
+    <script
+      data-goatcounter="https://joeyzou.goatcounter.com/count"
+      async
+      src="https://gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
